--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "deploy": "vercel"
   },
   "dependencies": {
+    "@hono/swagger-ui": "^0.4.0",
     "hono": "^4.5.3"
   },
   "devDependencies": {
