--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "deploy": "vercel"
   },
   "dependencies": {
+    "@hono/node-server": "^1.12.0",
     "@hono/swagger-ui": "^0.4.0",
     "@hono/zod-openapi": "^0.15.1",
     "hono": "^4.5.3"
