--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "homotres",
+  "type": "module", 
   "scripts": {
     "start": "vercel dev",
     "deploy": "vercel"
   },
   "dependencies": {
-    "@hono/node-server": "^1.12.0",
-    "@hono/swagger-ui": "^0.4.0",
-    "@hono/zod-openapi": "^0.15.1",
-    "hono": "^4.5.3"
+    "hono": "^4.4.2"
   },
   "devDependencies": {
     "vercel": "^32.4.1"
