--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/api/(.*)",
       "destination": "/api"
     }
+  ],
+  "redirects": [
+    { "source": "/", "destination": "/api", "permanent": false }
   ]
 }
