--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "type": "module", 
+  "type": "module",
   "scripts": {
     "start": "vercel dev",
     "deploy": "vercel"
   },
   "dependencies": {
+    "@hono/swagger-ui": "^0.4.0",
     "hono": "^4.4.2"
   },
   "devDependencies": {
