--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "type": "module",
   "scripts": {
+    "dev": "tsx watch lib/index.ts",
     "start": "vercel dev",
     "deploy": "vercel"
   },
   "dependencies": {
+    "@hono/node-server": "^1.12.0",
     "@hono/swagger-ui": "^0.4.0",
     "@hono/zod-openapi": "^0.15.1",
     "hono": "^4.4.2"
   },
   "devDependencies": {
+    "@types/node": "^22.0.1",
+    "tsx": "^4.16.3",
     "vercel": "^32.4.1"
   }
 }
